--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,61 @@
 /*  your css code here. If applicable */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #333;
+}
+
+.container {
+    display: flex;
+    width: 90vw;
+    height: 80vh;
+}
+
+.panel {
+    background-size: cover;
+    background-position: center;
+    flex: 0.2;
+    margin: 10px;
+    border-radius: 10px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: flex 0.7s ease-in-out;
+    cursor: pointer;
+}
+
+.panel.active {
+    flex: 5;
+}
+
+.panel h3 {
+    color: white;
+    font-size: 24px;
+    text-transform: uppercase;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    margin: 0;
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
+.panel.active h3 {
+    opacity: 1;
+}
+
+.img-text {
+    font-size: 20px;
+    color: white;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.7);
+}
